<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateVotos extends Migration{
	public function up(){ 
 		Schema::create('votos', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->integer('Contador');
			$table->bigInteger('candidate_id')->unsigned();
			$table->bigInteger('cabin_id')->unsigned();
			$table->date('date');
			$table->timestamps();
			$table->foreign('candidate_id')->references('id')->on('candidates')->onDelete('cascade');
			$table->foreign('cabin_id')->references('id')->on('cabins')->onDelete('cascade');
		});
 	} 
	public function down(){
 
	} 
}